--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
-      { "source": "/api/:path*", "destination": "/api/:path*" },
-      { "source": "/(.*)", "destination": "/" }
+    
+      { "source": "/(.*)", "destination": "/index" }
     ]
   }
   
